raffia/tests/error/scss/value/calc/dollar.snap
---
source: raffia/tests/error.rs
---
error: unknown token
  ┌─ dollar.scss:1:12
  │
1 │ a {b: calc($)}
  │            ^


